--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!--traiangle Card-->
                 <div class="card  w-full bg-base-100 shadow-xl">
-                    <figure>
+                    <figure class="h-40 items-center justify-center">
                       <img
                         src="images/triangle.png"
-                        alt="Shoes" />
+                        alt="triangle" class="h-full object-contain" />
                     </figure>
                     <div class="card-body">
                       <h2 class="card-title">Triangle</h2>
@@ -40,6 +40,30 @@
                       </div>
                     </div>
                   </div>
+                <!--Rectangle Card-->
+                <div class="card  w-full bg-base-100 shadow-xl">
+                    <figure class="h-40">
+                      <img
+                        src="images/rectangle.png"
+                        alt="rectangle" />
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Rectangle</h2>
+                      <p class="text-center">Area(A) = w × l </p>
+                      <div class="flex">
+                        <input id="rectangle-base" class="w-20 text-2xl p-2 rounded-sm" type="text" placeholder="w">
+                      <span class="mr-4 ml-2 mt-3">cm</span>
+                      <input  class="w-20 text-2xl p-2 rounded-sm" type="text" name="" id="rectangle-height" placeholder="l">
+                      <span class="mr-4 ml-2 mt-3">cm</span>
+                      </div>
+                      <div>
+                        <p class="text-2xl">Area: <span id="rectangle-area"></span> <span>cm</span><sup>2</sup></p>
+                      </div>
+                      <div class="card-actions  ">
+                        <button onclick="calculateRectangleArea()" class="btn btn-primary w-full">Calculate</button>
+                      </div>
+                    </div>
+                  </div>
                
                 
             </div>
@@ -51,5 +75,6 @@
         </div>
     </main>
     <script src="scripts/triangle-calculate.js"></script>
+    <script src="scripts/rectangle-calculate.js"></script>
 </body>
 </html>
