--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                   </div>
                 <!--Rectangle Card-->
                 <div class="card  w-full bg-base-100 shadow-xl">
-                    <figure class="h-40">
+                    <figure class="h-40 flex items-center justify-center">
                       <img
                         src="images/rectangle.png"
-                        alt="rectangle" />
+                        alt="rectangle"  class="h-full object-contain"/>
                     </figure>
                     <div class="card-body">
                       <h2 class="card-title">Rectangle</h2>
@@ -64,6 +64,30 @@
                       </div>
                     </div>
                   </div>
+                <!--Parallelogram Card-->
+                <div class="card  w-full bg-base-100 shadow-xl">
+                    <figure class="h-40">
+                      <img
+                        src="images/parallelogram.png"
+                        alt="rectangle" />
+                    </figure>
+                    <div class="card-body">
+                      <h2 class="card-title">parallelogram</h2>
+                      <p class="text-center">Area(A) = b × h </p>
+                      <div class="flex">
+                        <input id="parallelogram-base" class="w-20 text-2xl p-2 rounded-sm" type="text" placeholder="b">
+                      <span class="mr-4 ml-2 mt-3">cm</span>
+                      <input  class="w-20 text-2xl p-2 rounded-sm" type="text" name="" id="parallelogram-height" placeholder="h">
+                      <span class="mr-4 ml-2 mt-3">cm</span>
+                      </div>
+                      <div>
+                        <p class="text-2xl">Area: <span id="parallelogram-area"></span> <span>cm</span><sup>2</sup></p>
+                      </div>
+                      <div class="card-actions  ">
+                        <button onclick="calculateParallelogramArea()" class="btn btn-primary w-full">Calculate</button>
+                      </div>
+                    </div>
+                  </div>
                
                 
             </div>
@@ -76,5 +100,6 @@
     </main>
     <script src="scripts/triangle-calculate.js"></script>
     <script src="scripts/rectangle-calculate.js"></script>
+    <script src="scripts/parallelogram-calculate.js"></script>
 </body>
 </html>
