--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </figure>
                     <div class="card-body">
                       <h2 class="card-title">Rhombus</h2>
-                      <p class="text-center">Area(A) = d1 × d2 </p>
+                      <p class="text-center">Area(A) = 0.5 × d1 × d2 </p>
                       <div class="flex">
                         <input id="rhombus-diagonal1" class="w-20 text-2xl p-2 rounded-sm" type="text" placeholder="d1">
                       <span class="mr-4 ml-2 mt-3">cm</span>
